--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -30,7 +30,7 @@
                     <a asp-area="" asp-controller="Admin" asp-action="AdIndex"><i class="fas fa-chart-line"></i></a>
                 </button>
                 <button class="nav-button">
-                    <a href="ManageCourses.html"><i class="fas fa-book"></i></a>
+                    <a asp-area="" asp-controller="Admin" asp-action="ManageCourse"><i class="fas fa-book"></i></a>
                 </button>
                 <button class="nav-button">
                     <a asp-area="" asp-controller="Admin" asp-action="ManageUsers"><i class="fas fa-users"></i></a>
