--- a/Views/Admin/ManageCourse.cshtml
+++ b/Views/Admin/ManageCourse.cshtml
@@ -38,6 +38,9 @@
         <div class="card">
             <div class="card-body">
                 <div class="table-responsive">
+                    @{
+                        var a = 1;
+                    }
                     @if (Model != null && Model.Count > 0)
                     {
                         <table class="table table-hover">
@@ -59,7 +62,7 @@
                                     <tr>
                                         <td>
                                             @course.Title<br />
-                                            <small class="text-muted">ID:@course.Id</small>
+                                            <small class="text-muted">ID:@a</small>
                                         </td>
                                         <td>@course.Code</td>
                                         <td>@course.AcadamicYear</td>
@@ -72,30 +75,32 @@
                                             @* <a class="btn btn-soft btn-sm me-2" asp-area="" asp-controller="Home" asp-action="Modules"><i class="fas fa-eye"></i></a> *@
                                             <form method="post" action="@Url.Action("AdModules", "Admin")">
                                                 <input type="hidden" name="courseId" value="@course.Id" />
+                                                <input type="hidden" name="courseName" value="@course.Title" />
                                                 <button type="submit" class="btn btn-soft btn-sm me-2">
                                                     <i class="fas fa-eye"></i>
                                                 </button>
                                             </form>
 
                                             <button class="btn btn-soft btn-sm me-2 edit-course-btn"
-                                                    data-bs-toggle="modal" data-bs-target="#CourseModal"
-                                                    data-course-id="@course.Id"
-                                                    data-name="@course.Title"
-                                                    data-code="@course.Code"
-                                                    data-academic-year="@course.AcadamicYear"
-                                                    data-program="@course.Program"
-                                                    data-credit="@course.Credit"
-                                                    data-semester="@course.Semester"
-                                                    data-image="@course.Image">
+                                            data-bs-toggle="modal" data-bs-target="#CourseModal"
+                                            data-course-id="@course.Id"
+                                            data-name="@course.Title"
+                                            data-code="@course.Code"
+                                            data-academic-year="@course.AcadamicYear"
+                                            data-program="@course.Program"
+                                            data-credit="@course.Credit"
+                                            data-semester="@course.Semester"
+                                            data-image="@course.Image">
                                                 <i class="fas fa-edit"></i>
                                             </button>
                                             @* <button class="btn btn-soft btn-sm"><i class="fas fa-trash" style="color:red"></i></button> *@
                                             <button class="btn btn-soft btn-sm delete-course-btn"
-                                                    data-course-id="@course.Id">
+                                            data-course-id="@course.Id">
                                                 <i class="fas fa-trash" style="color:red"></i>
                                             </button>
                                         </td>
                                     </tr>
+                                    a++;
                                 }
                             </tbody>
                         </table>
