--- a/Views/Home/Content.cshtml
+++ b/Views/Home/Content.cshtml
@@ -63,7 +63,7 @@
                 <i class="fas fa-file-pdf"></i> Download PDF
             </a>
             <div class="pdf-preview">
-                <iframe src="Content/resume.pdf"
+                <iframe src="CourseMedia/resume.pdf"
                         width="100%"
                         height="500px"></iframe>
             </div>
